--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,12 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
-      rel="stylesheet"
-    />
-    <link
       rel="manifest"
       href="%PUBLIC_URL%/manifest.json"
     />
     <title>React App</title>
   </head>
-  <body class="selection:text-primary font-roboto">
+  <body>
     <noscript
       >You need to enable JavaScript to run this
       app.</noscript
